# test-ml-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
churn_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: ml-python.md
conductor/tracks/churn_pipeline_20251226/: metadata.json  plan.md  spec.md
data/: .gitkeep
docs/: MODEL_CARD.md
models/: .gitkeep
notebooks/: .gitkeep  01_data_exploration.ipynb  02_baseline_model.ipynb  03_model_experiments.ipynb  04_final_evaluation.ipynb  mlflow.db
notebooks/mlruns/1/models/m-01b3666d78a94468b743d438cc031752/artifacts/: MLmodel  input_example.json  model.pkl  serving_input_example.json
notebooks/mlruns/2/models/m-a53cfd5d6e0946489a6b92fb330acb8a/artifacts/: MLmodel  model.pkl
notebooks/mlruns/2/models/m-d4c5ace93dd6440aa569da9f21af93fd/artifacts/: MLmodel  model.pkl
notebooks/mlruns/3/models/m-bdb62cc064594a3fa9f54ff872001436/artifacts/: MLmodel  conda.yaml
src/: __init__.py  data_loader.py  experiment.py  preprocessing.py  train.py
tests/: __init__.py  test_data_loader.py  test_experiment.py  test_preprocessing.py
